from enum import Enum, auto


class TileType(Enum):
    MANZU = 'm'
    SOUZU = 's'
    PINZU = 'p'
    JIHAI = ''
